--- a/index.html
+++ b/index.html
@@ -2,20 +2,32 @@
 layout: default
 ---
 
-<div class="posts">
-  <h1>About Me</h1>
-  I am an experienced French engineer with 6+ years in Power, Software & Healthcare industries. I have a strong interest in data analysis.
-  </br>
-  * Healthcare & Power Industry * Software Development * Python * Databases * Project Management * Agile Methodology * Digitalization *
-  </br>  
-  </br>
-  I am currently working at 4D as a project manager,overseeing teams of developers in the successful delivery of new software solutions. 
-  </br>  
-  </br>
-  More generally, I developed a strong interest in digitalization and in the power industry. 
-</br>  
-</br>
-  On this site, you will find my <a href="/resume"> resume</a> and some of my <a href="/works">works</a>.  
+I am an experienced French engineer with 6+ years in **Power, Software & Healthcare industries**. I have a strong interest in **data analysis**.
+
+<style>
+  .tag {
+    display: inline-block;
+    padding: 6px 12px;
+    margin: 5px;
+    border-radius: 20px;
+    font-weight: bold;
+    color: gray;
+  }
+</style>
+
+<div style="text-align: center; margin-top: -1.5%;">
+  <span class="tag" style="background-color: #{{RANDOM_COLOR_1}};">Healthcare & Power Industry</span>
+  <span class="tag" style="background-color: #{{RANDOM_COLOR_2}};">Software Development</span>
+  <span class="tag" style="background-color: #{{RANDOM_COLOR_3}};">Python</span>
+  <span class="tag" style="background-color: #{{RANDOM_COLOR_4}};">Databases</span>
+  <span class="tag" style="background-color: #{{RANDOM_COLOR_5}};">Project Management</span>
+  <span class="tag" style="background-color: #{{RANDOM_COLOR_6}};">Agile Methodology</span>
+  <span class="tag" style="background-color: #{{RANDOM_COLOR_7}};">Digitalization</span>
 </div>
 
+I am currently working at 4D as a project manager, overseeing teams of developers in the successful delivery of new software solutions. 
+
+I have a strong interest in digitalization and in the power industry. 
+
+Please don't hesitate to check my [resume](https://www.yvesmarieplard.fr/resume) and some of my [works](https://www.yvesmarieplard.fr/works).
 
